<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:padding="18dp"
        android:text="@string/done"
        android:textColor="@color/purple_500"
        android:textSize="16sp" />


    <CalendarView
        android:id="@+id/calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:id="@+id/calendar_line"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:background="@color/gray" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/set_time_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_time"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/remove_time_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/cancel_icon"
            android:visibility="gone" />

    </RelativeLayout>


    <TimePicker
        android:id="@+id/time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:visibility="gone" />

    <View
        android:id="@+id/set_time_line"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/gray" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp">

        <TextView
            android:id="@+id/set_frequency_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hourly"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/remove_frequency_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/cancel_icon"
            android:visibility="gone" />
    </RelativeLayout>

    <RadioGroup
        android:id="@+id/radio_group"
        android:visibility="gone"
        android:layout_marginBottom="24dp"
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/hourly_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/radio_bg"
            android:paddingHorizontal="12dp"
            android:paddingVertical="4dp"
            android:text="@string/hourly" />

        <RadioButton
            android:id="@+id/daily_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/radio_bg"
            android:paddingHorizontal="12dp"
            android:paddingVertical="4dp"
            android:text="@string/daily" />

        <RadioButton
            android:id="@+id/weekly_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/radio_bg"
            android:paddingHorizontal="12dp"
            android:paddingVertical="4dp"
            android:text="@string/weekly" />

        <RadioButton
            android:id="@+id/monthly_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/radio_bg"
            android:paddingHorizontal="12dp"
            android:paddingVertical="4dp"
            android:text="@string/monthly" />

        <RadioButton
            android:id="@+id/yearly_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/radio_bg"
            android:paddingHorizontal="12dp"
            android:paddingVertical="4dp"
            android:text="@string/yearly" />
    </RadioGroup>

</LinearLayout>