<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:cardCornerRadius="8dp"
        app:contentPadding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/new_routine"
                android:inputType="textCapSentences"
                android:padding="8dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/add_description"
                android:inputType="textCapSentences"
                android:padding="8dp"
                android:textSize="14sp"
                android:visibility="gone" />

            <RelativeLayout
                android:visibility="gone"
                android:id="@+id/date_time_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="12dp"
                android:paddingVertical="8dp"
                android:layout_marginHorizontal="8dp"
                android:background="@drawable/radio_bg">

                <TextView
                    android:id="@+id/date_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Thur, 22 Jul" />

                <ImageView
                    android:id="@+id/cancel_button"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_toEndOf="@id/date_time"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="12dp"
                    android:src="@drawable/cancel_icon"/>

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="12dp"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/description_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="8dp"
                    android:src="@drawable/description_icon" />

                <ImageView
                    android:id="@+id/calendar_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@id/description_icon"
                    android:padding="8dp"
                    android:src="@drawable/calendar_icon" />


                <TextView
                    android:id="@+id/save_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:alpha="0.5"
                    android:padding="8dp"
                    android:text="@string/save"
                    android:textSize="16sp" />
            </RelativeLayout>
        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>